<resources>
    <string name="app_name">Location Tracker</string>
    <string name="app_name_sp">Rastreador de Ubicación</string>
    <string name="username">PUT HERE USERNAME</string>
    <string name="app_id">PUT HERE REALM APP ID</string>
    <string name="database_name">PUT HERE DATABASE NAME</string>
    <string name="user_collection_name">PUT HERE USERS COLLECTION NAME</string>
    <string name="red_zones_collection_name">PUT HERE RED ZONES COLLECTION NAME</string>
    <string name="track_user">Track User</string>
    <string name="track_user_sp">Rastrear Usuario</string>
    <string name="placeholder_username">Enter the username to track</string>
    <string name="placeholder_username_sp">Ingrese el nombre de usuario a rastrear</string>
    <string name="hint_username">Username to Track</string>
    <string name="hint_username_sp">Nombre de Usuario a Rastrear</string>
    <string name="required">*Required</string>
    <string name="required_sp">*Requerido</string>
    <string name="go_to_map">GO TO MAP</string>
    <string name="go_to_map_sp">IR AL MAPA</string>
    <string name="follow">FOLLOW</string>
    <string name="follow_sp">SEGUIR A</string>
    <string name="traffic_enable">ENABLE TRAFFIC</string>
    <string name="traffic_enable_sp">ACTIVAR TRAFICO</string>
    <string name="traffic_disable">DISABLE TRAFFIC</string>
    <string name="traffic_disable_sp">DESACTIVAR TRAFICO</string>
    <string name="title_activity_maps">Map</string>
    <string name="permissions">Please accept the permissions and try again</string>
    <string name="permissions_sp">Por favor, acepte los permisos y luego intente otra vez</string>
    <string name="network">There is no Internet service, enable Wifi or Mobile Data to continue</string>
    <string name="network_sp">No hay servicio de Internet, habilite el Wifi o los Datos móviles para continuar</string>
    <string name="gps">Please enable the GPS service to continue</string>
    <string name="gps_sp">Por favor, habilite el servicio de GPS para continuar</string>
    <string name="missing_text">You must enter the username to be tracked to continue</string>
    <string name="missing_text_sp">Debe ingresar el nombre de usuario a rastrear para continuar</string>
    <string name="missing_username"> can\'t be found in the database, correct the username</string>
    <string name="missing_username_sp"> no se encuentra en la base de datos, corrija el nombre de usuario</string>
    <string name="invalid_user">Invalid user</string>
    <string name="invalid_user_sp">Usuario invalido</string>
    <string name="configurationTitle_sp">Zonas Rojas</string>
    <string name="configurationTitle">Red Zones</string>
    <string name="add_red_zone_sp">Añadir Zona Roja</string>
    <string name="add_red_zone">Add Red Zone</string>
    <string name="edit_red_zone_sp">Editar Zona Roja</string>
    <string name="edit_red_zone">Edit Red Zone</string>
    <string name="confirmation_sp">¿Esta seguro de eliminar la Zona Roja seleccionada?</string>
    <string name="confirmation">Are you sure to delete the selected Red Zone?</string>
    <string name="void_data_sp">No hay ninguna Zona Roja registrada, ¿Quiere ingresar uno nuevo?</string>
    <string name="void_data">There is no registered Red Zone, Do you want to enter a new one?</string>
    <string name="intro_message_sp">Define el centro de la Zona Roja tocando el mapa</string>
    <string name="intro_message">Set Red Zone Center touching the map</string>
    <string name="missing_center_sp">Debe definir un Centro para la Zona Roja tocando un punto en el mapa</string>
    <string name="missing_center">You must set a Center for the Red Zone by touching a point on the map</string>
    <string name="center_title_sp">Este será el Centro de la Zona Roja</string>
    <string name="center_title">This will be the Center of the Red Zone</string>
    <string name="hint_name_sp">Nombre de la Zona Roja</string>
    <string name="hint_name">Red Zone Name</string>
    <string name="hint_radius_sp">Radio de la Zona Roja</string>
    <string name="hint_radius">Red Zone Radius</string>
    <string name="placeholder_name_sp">Ingrese el nombre de la Zona Roja</string>
    <string name="placeholder_name">Enter the red zone name</string>
    <string name="placeholder_radius_sp">Ingrese el radio de la Zona Roja en metros</string>
    <string name="placeholder_radius">Enter the red zone radius in meters</string>
    <string name="missing_data_sp">Debe completar la información requerida</string>
    <string name="missing_data">You must complete information required</string>
    <string name="same_name_sp">Ya existe una Zona Roja con el mismo nombre, por favor cambielo para continuar</string>
    <string name="same_name">There\'s already a Red Zone with the same name, please change it to continue</string>
    <string name="delete_message_sp">Zona Roja eliminada exitosamente</string>
    <string name="delete_message">Red Zone deleted successfully</string>
    <string name="insert_message_sp">Zona Roja añadida exitosamente</string>
    <string name="insert_message">Red Zone added successfully</string>
    <string name="update_message_sp">Zona Roja actualizada exitosamente</string>
    <string name="update_message">Red Zone updated successfully</string>
    <string name="error_message_sp">Ha ocurrido un error ejecutando el proceso, por favor inténtelo nuevamente</string>
    <string name="error_message">An error has occurred running the process, please try again</string>
    <string name="go_back">GO BACK</string>
    <string name="go_back_sp">REGRESAR</string>
    <string name="unknown_address">Unknown Address</string>
    <string name="unknown_address_sp">Dirección Desconocida</string>
    <string name="track_all_users">Track All Users</string>
    <string name="track_all_users_sp">Rastrear todos los Usuarios</string>
    <string name="insufficient_users">There\'s only one user, please use TRACK USER</string>
    <string name="insufficient_users_sp">Sólo hay un usuario, por favor use RASTREAR USUARIO</string>
    <string name="loading">Loading…</string>
    <string name="loading_sp">Cargando…</string>
</resources>