<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".trackuser.TrackUser">

    <TextView
        android:id="@+id/trackUserTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/style_border_title"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/track_user"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="28sp"
        android:textStyle="normal"
        app:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationLogo" />

    <ImageView
        android:id="@+id/locationLogo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/trackUserTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/location_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/placeholder_username"
        android:textColor="@color/white"
        android:background="@drawable/style_text_field"
        android:textColorHint="@color/grey"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/goToMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackUserTitle"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/goToMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/dark_red"
        android:fontFamily="sans-serif-medium"
        android:text="@string/go_to_map"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="normal"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>