<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".redzones.RedZonesSettings"
    android:background="@color/black">

    <TextView
        android:id="@+id/addRedZoneTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/style_border_title"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/add_red_zone"
        android:textColor="@color/red"
        android:textSize="28sp"
        android:textStyle="normal"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/style_text_field"
        android:hint="@string/hint_name"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:autoSizeTextType="uniform"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRedZoneTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/style_text_field"
        android:hint="@string/hint_radius"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/addRedZone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addRedZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/dark_red"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/add_red_zone"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/previous"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/dark_red"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="GO BACK"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addRedZone"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>