<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:background="@color/dark_blue">

    <ImageView
        android:id="@+id/locationLogo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/location_logo" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/style_border_title"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:textStyle="normal"
        app:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationLogo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName">

        <androidx.cardview.widget.CardView
            android:id="@+id/trackUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"
            android:backgroundTint="@color/light_red"
            android:padding="6dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/redZoneIcon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="14dp"
                    app:srcCompat="@drawable/ic_person" />

                <TextView
                    android:id="@+id/trackUserText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/redZoneIcon"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/track_user"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/configurationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"
            android:backgroundTint="@color/light_red"
            android:padding="6dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/configurationImage"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="14dp"
                    app:srcCompat="@drawable/ic_red_zone" />

                <TextView
                    android:id="@+id/configurationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/configurationImage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/configurationTitle"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="100sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/allUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:backgroundTint="@color/dark_red"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/track_all_users"
            android:textColor="@color/white"
            android:textStyle="normal"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>